<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_stock_ticker"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:id="@+id/stock_review_graph"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="15dp"
            android:padding="12dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/initial_balance"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:text="@string/initial_balance"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/stock_portfolio_value"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:text="@string/portfolio_value"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/stock_shares_held"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:text="@string/portfolio_stock_shares_held"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transactions"
            android:id="@+id/transaction_text"
            android:textSize="28sp"
            android:textStyle="bold"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_stock_transactions_recycler_view"
            android:layout_margin="12dp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_review_stock"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</FrameLayout>
